Added tournament history
