# docs/swagger.yaml
@@ -681,6 +681,42 @@ paths:
       summary: Publishes a game start event
       tags:
       - actions
+  /tournaments/{id}/history:
+    get:
+      consumes:
+      - application/json
+      parameters:
+      - description: Tournament ID
+        in: path
+        name: id
+        required: true
+        type: string
+      - description: The RFC3339 date to get history from
+        format: date
+        in: query
+        name: from
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              $ref: '#/definitions/TournamentPlayerHistory'
+            type: array
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/Error'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/Error'
+      summary: Get ranking history for a tournament
+      tags:
+      - tournament
   /tournaments/{id}/players:
     get:
       consumes:
